# hap

./: .gitmodules  README.md  justfile  writeup.md
demo/: Cargo.toml
demo/benches/: bench.rs
demo/src/: api.rs  lib.rs
demo/src/r1cs_provider/: mod.rs
demo/src/r1cs_provider/gnark/: mod.rs
zprize/: Cargo.toml
zprize/benches/: bench.rs
zprize/src/: api.rs  circuit.rs  lib.rs
zprize/src/r1cs_provider/: builder.rs  deserialize.rs  mod.rs
zprize/src/r1cs_provider/gnark/: mod.rs
zprize/src/r1cs_provider/xjsnark/: libsnark.rs  mod.rs
