[package]
edition = "2021"
name = "demo"
version = "0.1.0"

[dependencies]
rand = "0.8.5"
snarkvm-algorithms = {git = "https://github.com/AleoHQ/snarkVM", branch = "zprize_2023"}
snarkvm-circuit = {git = "https://github.com/AleoHQ/snarkVM", branch = "zprize_2023"}
snarkvm-circuit-environment = {git = "https://github.com/AleoHQ/snarkVM", branch = "zprize_2023"}
snarkvm-console = {git = "https://github.com/AleoHQ/snarkVM", branch = "zprize_2023", features = [
  "types",
]}
snarkvm-console-network = {git = "https://github.com/AleoHQ/snarkVM", branch = "zprize_2023"}
snarkvm-curves = {git = "https://github.com/AleoHQ/snarkVM", branch = "zprize_2023"}
snarkvm-parameters = {git = "https://github.com/AleoHQ/snarkVM", branch = "zprize_2023"}
snarkvm-utilities = {git = "https://github.com/AleoHQ/snarkVM", branch = "zprize_2023"}

aleo-std-profiler = {version = "0.1.15", features = ["profiler"]}# enable "profiler" feature for this crate, which is depended by snarkVM
# aleo-std-profiler = { version = "0.1.15", features = []}
anyhow = "1.0.79"
hex = "0.4.3"
serde = "1.0"
serde_cbor = "0.11.2"

env_logger = "0.10"
log = "0.4.22"
num-bigint = "0.4.4"
once_cell = "1.19.0"
rayon = "1.8"
scopeguard = "1.2.0"
tempfile = "3.9.0"
time = {version = "0.3", features = ["formatting", "local-offset", "macros"]}

[patch."https://github.com/AleoHQ/snarkVM"]
snarkvm-algorithms = {path = '../snarkVM/algorithms'}
snarkvm-circuit = {path = '../snarkVM/circuit'}
snarkvm-circuit-environment = {path = '../snarkVM/circuit/environment'}
snarkvm-console = {path = '../snarkVM/console'}
snarkvm-console-network = {path = '../snarkVM/console/network'}
snarkvm-curves = {path = '../snarkVM/curves'}
snarkvm-parameters = {path = '../snarkVM/parameters'}
snarkvm-utilities = {path = '../snarkVM/utilities'}

[patch.crates-io]
aleo-std-profiler = {path = '../aleo-std/profiler'}

[dev-dependencies]
criterion = {version = "0.4", features = ["html_reports"]}

[[bench]]
harness = false
name = "bench"

[profile.test]
codegen-units = 16 
debug = true 
debug-assertions = true 
incremental = false 
lto = false 
opt-level = 3 
overflow-checks = false 
panic = 'unwind' 
rpath = false 
split-debuginfo = '...' # Platform-specific.
strip = "none"
