[package]
name = "zprize"
version = "0.1.0"
edition = "2021"

[dependencies]
snarkvm-algorithms = { git = "https://github.com/AleoHQ/snarkVM", branch = "zprize_2023" }
snarkvm-circuit = { git = "https://github.com/AleoHQ/snarkVM", branch = "zprize_2023" }
snarkvm-console = { git = "https://github.com/AleoHQ/snarkVM", branch = "zprize_2023", features = [
    "types",
] }
snarkvm-curves = { git = "https://github.com/AleoHQ/snarkVM", branch = "zprize_2023" }
snarkvm-circuit-environment = { git = "https://github.com/AleoHQ/snarkVM", branch = "zprize_2023" }
snarkvm-console-network = { git = "https://github.com/AleoHQ/snarkVM", branch = "zprize_2023" }
snarkvm-utilities = { git = "https://github.com/AleoHQ/snarkVM", branch = "zprize_2023" }

rand = "0.8.5"
k256 = { version = "0.13", features = ["ecdsa"] }
ecdsa = { version = "0.16", features = ["signing", "verifying"] }
sha3 = "0.10"

serde = "1.0"
serde_json = "1.0"
anyhow = "1.0.79"
hex = "0.4.3"
aleo-std-profiler = { version = "0.1.15", features = ["profiler"]} # enable "profiler" feature for this crate, which is depended by snarkVM

tempfile = "3.9.0"

[patch."https://github.com/AleoHQ/snarkVM"]
snarkvm-algorithms = { path = '../../snarkVM/algorithms' }
snarkvm-circuit = { path = '../../snarkVM/circuit' }
snarkvm-console = { path = '../../snarkVM/console' }
snarkvm-curves = { path = '../../snarkVM/curves' }
snarkvm-circuit-environment = { path = '../../snarkVM/circuit/environment' }
snarkvm-console-network = { path = '../../snarkVM/console/network' }
snarkvm-utilities = { path = '../../snarkVM/utilities' }

[dev-dependencies]
criterion = { version = "0.4", features = ["html_reports"] }

[[bench]]
name = "bench"
harness = false
